--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
         </div>
 
         <div class="cta">
-          <a class="btn primary" href="resume.pdf" target="_blank" rel="noopener">Скачать резюме (PDF)</a>
-          <!-- Поставьте ссылки, когда будете готовы -->
+          <a class="btn primary" href="https://www.linkedin.com/in/roberts31337" target="_blank" rel="noopener">LinkedIn</a>
           <a class="btn" href="#" aria-disabled="true" title="Добавьте ссылку на GitHub">GitHub</a>
-          <a class="btn" href="#" aria-disabled="true" title="Добавьте ссылку на LinkedIn/HH/другой профиль">Профиль</a>
         </div>
       </div>
 
