--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="ru">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYF47QESQY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HYF47QESQY');
+  </script>
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Роберт Садретдинов — Senior Java Backend Developer</title>
